remove tutor problem view
