# ai_chatbots/views.py
@@ -5,15 +5,10 @@ from django_filters.rest_framework import DjangoFilterBackend
 from drf_spectacular.types import OpenApiTypes
 from drf_spectacular.utils import (
     OpenApiParameter,
-    OpenApiResponse,
     extend_schema,
-    inline_serializer,
 )
-from open_learning_ai_tutor.problems import get_pb_sol
-from rest_framework import mixins, serializers, viewsets
+from rest_framework import mixins, viewsets
 from rest_framework.permissions import AllowAny, IsAuthenticated
-from rest_framework.response import Response
-from rest_framework.views import APIView
 from rest_framework.viewsets import ReadOnlyModelViewSet
 
 from ai_chatbots.models import DjangoCheckpoint, LLMModel, UserChatSession
@@ -94,54 +89,6 @@ class ChatMessageViewSet(mixins.ListModelMixin, viewsets.GenericViewSet):
             .extra(where=[self.message_filter])  # noqa: S610 - just a hardcoded filter
             .order_by("metadata__step")
         )
-
-
-@extend_schema(
-    parameters=[
-        OpenApiParameter(
-            name="problem_code",
-            type=OpenApiTypes.STR,
-            location=OpenApiParameter.PATH,
-            description="problem_code of the problem",
-        )
-    ],
-    responses={
-        200: inline_serializer(
-            name="ProblemAndSolutionResponse",
-            fields={
-                "problem": serializers.CharField(),
-                "solution": serializers.CharField(),
-            },
-        ),
-        404: OpenApiResponse(description="Missing problem code"),
-    },
-)
-class TutorProblemView(APIView):
-    """
-    endpoint that returns the content of a sample tutor problem
-    """
-
-    permission_classes = ()
-    http_method_names = ["get"]
-
-    def get(self, request):
-        """
-        Return a sample tutor problem and solution.
-        """
-        problem_code = request.GET.get("problem_code")
-        try:
-            problem, solution = get_pb_sol(problem_code)
-
-            return Response(
-                {
-                    "problem": problem,
-                    "solution": solution,
-                }
-            )
-        except KeyError:
-            return Response(
-                {"error": f"Problem code {problem_code} not found."}, status=404
-            )
 
 
 class LLMModelViewSet(ReadOnlyModelViewSet):
